Definición de fuente y tamaño de fuente

--- a/css/imaturh.styl
+++ b/css/imaturh.styl
@@ -1,8 +1,10 @@
 azul = #22BCE0
 
 body 
-	background #E8E8E8
+	background #EEEEEE
 	color #444
+	font-family Arial
+	font-size 16px
 
 nav 
 	background azul
