--- a/css/imaturh.css
+++ b/css/imaturh.css
@@ -1,6 +1,8 @@
 body {
-  background: #e8e8e8;
+  background: #eee;
   color: #444;
+  font-family: Arial;
+  font-size: 16px;
 }
 nav {
   background: #22bce0;
