Aplicando diseño al nav y footer de la página

--- a/css/imaturh.styl
+++ b/css/imaturh.styl
@@ -6,8 +6,53 @@ body
 	font-family Arial
 	font-size 16px
 
-nav 
+footer
+	color rgba(255,255,255,0.7)
+	color white
 	background azul
+	text-align center
+	padding 1em
+
+footer p:first-child
+	margin-bottom 0
+
+footer p:last-child
+	margin-top 0
+	
+footer p:last-child:after
+	content " -"
+
+footer p:last-child:before
+	content "- "
+
+header
+	text-align center
+	background #343B54
+	color white
+	padding 0.3em
+	
+header h1
+	font-size 1.2em
 	
 
+header .logo img
+	widht 450px
+	hight 235px	
 	
+nav 
+	background #80BCA3	
+	padding 0 0.5em
+
+nav ul
+	list-style none
+	margin 0
+	padding 0
+
+nav ul li
+	display inline-block
+	margin 0 1.2em 0 0
+
+nav ul li a
+	color #EEEEEE
+	display block 
+	padding 0.5em 0
