--- a/css/imaturh.styl
+++ b/css/imaturh.styl
@@ -1,9 +1,15 @@
-azul = #22BCE0
+@font-face
+	font-family "open sans"
+	URL "fonts/OpenSans-Light.ttf"
+	font-weight normal
+	font-style italic
+	
+ azul = #22BCE0
 
 body 
 	background #EEEEEE
 	color #444
-	font-family Arial
+	font-family "open sans"
 	font-size 16px
 
 footer
