--- a/css/imaturh.styl
+++ b/css/imaturh.styl
@@ -38,8 +38,7 @@ header
 	padding 0.3em
 	
 header h1
-	font-size 1.2em
-	
+	font-size 1.2em	
 
 header .logo img
 	widht 450px
@@ -57,6 +56,10 @@ nav ul
 nav ul li
 	display inline-block
 	margin 0 1.2em 0 0
+
+nav ul li:hover
+	background #343B54
+	cursor pointer	
 
 nav ul li a
 	color #EEEEEE
